# Sentiment_Analysis_HF_Rust

./: Cargo.toml
src/: main.rs
