[package]
name = "sentiment_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
inquire = "0.7.5"
colorize = "0.1.0"
strum = "0.24.1"
strum_macros = "0.24.1"
reqwest = { version="0.11", features=["json", "blocking"]}
tokio = { version="1", features=["full"]}
serde = "1.0.132"
serde_json = "1.0"
indicatif = "0.16"
